--- a/src/main/java/view/MainGui.form
+++ b/src/main/java/view/MainGui.form
@@ -37,7 +37,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="de088" class="javax.swing.JList" binding="listMovies">
+          <component id="de088" class="javax.swing.JList" binding="movieJList">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
